# HemoStroke-PPG-Artifact

./: CITATION.cff  LICENSE  MODEL_CARD.md  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: feature_extraction.yaml  feature_set_17.json  llm_historical_run.yaml  lstm_baseline.yaml  mcmed_data.yaml  mimic_data.yaml  paths.example.yaml  sensitivity.yaml  training.yaml
data/: README.md
docs/: benchmark_results.md  code_map.md  data_access.md  feature_dictionary.md  llm_anchor_extraction.md  mcmed_anchor_generation.md  reproducibility.md
outputs/: README.md
prompts/: stroke_timestamp_extraction.md
scripts/qc/: summarize_label_coverage.py
scripts/reproduce/: figure_roc.py  figure_shap.py  figure_subgroup_f1.py  figure_temporal_cases.py  plot_note_cohort_distributions.py  table1_mcmed_cohort_stats.py  table3_main_benchmarks.py  table4_false_alert_burden.py
src/: __init__.py
src/analysis/: operating_point.py  roc_analysis.py  subgroup_statistics.py
src/data/: __init__.py
src/datasets/: __init__.py  build_external_eval_set.py  build_main_horizon_sets.py  build_subgroup_sets.py
src/explain/: plot_feature_trajectories.py  shap_analysis.py
src/features/: __init__.py  clean_feature_table.py  engineer_features.py  extract_ppg_features.py  select_features.py
tests/: test_feature_shapes.py  test_filter_labels_alignment.py  test_frozen_preprocessing.py  test_group_split.py  test_labeling.py  test_main_horizon_sets.py  test_mcmed_anchor_generation.py  test_operating_point.py  test_patient_level_split.py  test_subgroup_frozen_pipeline.py
(+15 files in other folders)
