[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hemostroke-ppg"
version = "0.1.0"
description = "In-hospital stroke risk-state classification from PPG-derived hemodynamic features."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Jiaming Liu"},
  {name = "Cheng Ding"},
  {name = "Daoqiang Zhang"}
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
